# is-crawler

./: .gitignore  .prettierignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  crawler-user-agents.csv  pyproject.toml
.github/workflows/: _test.yml  build-csv.yml  build-db.yml  github-pages.yml  publish.yml  test.yml
benchmarks/: bench.py  bench_apache_logs.py  bench_ip.py  bench_no_regex.py  bench_parser.py  googlebot_uncached.py
docs/: 404.html  CNAME  index.html  robots.txt  sitemap.xml
is_crawler/: __init__.py  __main__.py  contrib.py  crawler-ip-ranges.json  crawler-rdns.json  crawler-user-agents.json  database.py  detection.py  ip.py  no_regex.py  parser.py
snippets/: README.md  crawler_name.py  crawler_url.py  crawler_version.py  db_reader.py  detect_engine.py  detect_os.py  fcrdns.py  is_crawler_full.py  is_crawler_minimal.py  is_mobile.py  parse_user_agent.py  robots_txt.py  tests.py
tests/: __init__.py  apache_logs.py  contrib.py  database.py  detection.py  generated_browsers.py  ip.py  parser.py  test_apache_logs.py  test_contrib.py  test_crawler.py  test_crawler_dataset.py  test_database.py  test_ip.py  test_is_crawler.py  test_main.py  test_no_regex.py  test_parser.py
tests/fixtures/: browser_user_agents.txt  browser_user_agents_extended.txt  crawler_user_agents.txt
tools/: build_csv.py  build_db.py  build_ip_ranges.py  build_user_agents.py  crawler-ip-ranges.json  crawler-user-agents-flags.json  extra-crawler-user-agents.json
