[project]
name = "is-crawler"
version = "1.4.0"
description = "Fast, regex-free crawler detection from user agents. Zero deps, ReDoS-safe heuristics, ~40× faster than alternatives."
readme = "README.md"
authors = [
    {name = "TN3W", email = "tn3w@protonmail.com"}
]
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
]
keywords = ["crawler", "bot-detection", "user-agent", "spider", "scraper", "web-scraping", "bot", "robot", "useragent", "detection", "security", "middleware"]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[project.urls]
Homepage = "https://is-crawler.tn3w.dev"
Repository = "https://github.com/tn3w/is-crawler.git"
Issues = "https://github.com/tn3w/is-crawler/issues"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["is_crawler"]

[tool.setuptools.package-data]
is_crawler = ["crawler-user-agents.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=is_crawler --cov-report=term-missing --cov-fail-under=100 -v"