[project]
name = "is-crawler"
version = "1.5.12"
description = "Crawler detection from User-Agent strings in 50 ns. Zero deps, no regex, ReDoS-safe."
readme = "README.md"
authors = [
    {name = "TN3W", email = "tn3w@protonmail.com"}
]
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
]
keywords = ["crawler", "bot-detection", "user-agent", "spider", "scraper", "web-scraping", "bot", "robot", "useragent", "detection", "security", "middleware"]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff"]

[project.scripts]
is-crawler = "is_crawler.__main__:main"

[project.urls]
Homepage = "https://github.com/tn3w/is-crawler"
Repository = "https://github.com/tn3w/is-crawler.git"
Issues = "https://github.com/tn3w/is-crawler/issues"
Funding = "https://www.buymeacoffee.com/tn3w"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["is_crawler"]
artifacts = ["is_crawler/*.json", "is_crawler/py.typed"]

[tool.ruff]
line-length = 90
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]
"tools/*" = ["E501"]

[tool.ruff.lint.isort]
force-sort-within-sections = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["*.py"]
python_functions = ["test_*"]
addopts = "--cov=is_crawler --cov-report=term-missing --cov-fail-under=100 -v"